Work-in-progress commit to share intermediate result (with MZ comments, println logging, etc.)
* versioned as 10.0.0-SNAPSHOT to align with ee10
* currently myfaces only
* build a jar (when tests are bypassed)